tests/ui/traits/incomplete-infer-via-sized-wc.next.stderr
error[E0282]: type annotations needed
  --> $DIR/incomplete-infer-via-sized-wc.rs:15:5
   |
LL |     is_sized::<MaybeSized<_>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `is_sized`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
